Add hubris.house domain

--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -64,6 +64,6 @@
     - omnyom.com
     - factionfiction.net
     - warehousebasement.com
-    - skute.me
+    - hubris.house
   notify:
    - restart nginx
