Fix variables spacing (ansible-lint project)

--- a/playbook.yml
+++ b/playbook.yml
@@ -34,7 +34,11 @@
     - water-gkhs-flexget
     - b2-backup
   tasks:
-    - user: name={{ item }} groups=docker append=yes
+    - name: Add users to docker group
+      user:
+        name: "{{ item }}"
+        groups: docker
+        append: yes
       with_items:
        - aquarion
        - ccooke
