Shift to python3 by default

--- a/roles/water-gkhs-packages/tasks/main.yml
+++ b/roles/water-gkhs-packages/tasks/main.yml
@@ -39,7 +39,8 @@
   apt:
     state: present
     pkg:
-     - python
+     - python3
+     - python-is-python3
      - build-essential
      - libffi-dev
        #- libssl-dev
