--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-ansible/host_vars/*net.yml diff=ansible-vault merge=binary
-ansible/group_vars/*.yml diff=ansible-vault merge=binary
+host_vars/*net.yml diff=ansible-vault merge=binary
+group_vars/*.yml diff=ansible-vault merge=binary
