Fixes for Python3

--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -14,6 +14,10 @@
 
 - apt: name=mariadb-server state=present
 - apt: name=moreutils state=present # provides chronic
+- name: Install python libraries
+  apt: 
+   name: python3-mysqldb
+   state: present
 
 
 # Set root password
