--- a/roles/water-gkhs-packages/tasks/main.yml
+++ b/roles/water-gkhs-packages/tasks/main.yml
@@ -40,7 +40,6 @@
     state: present
     pkg:
      - python3
-     - python-is-python3
      - build-essential
      - libffi-dev
        #- libssl-dev
@@ -65,8 +64,15 @@
     pkg:
      - software-properties-common
      - python3-pip
+     - python-is-python3
   tags:
     - certbot
+
+- name: python-is-python3
+  file:
+   dest: /usr/bin/python
+   src: python3
+   state: link
 
 - name: Install Utility Packages
   apt:
