⚰ RIP Paul Brown.

--- a/roles/water-gkhs-nginx/files/clacks.conf
+++ b/roles/water-gkhs-nginx/files/clacks.conf
@@ -1,1 +1,1 @@
-add_header  X-Clacks-Overhead "GNU Terry Pratchett Gaz Hunter";
+add_header  X-Clacks-Overhead "GNU Terry Pratchett, Paul Brown, Gaz Hunter";
