--- a/roles/water-gkhs-web-errors/tasks/main.yml
+++ b/roles/water-gkhs-web-errors/tasks/main.yml
@@ -2,36 +2,56 @@
 #  apt: pkg=nginx state=installed
 
 - name: Create www errors directory
-  file: path=/var/www/errors state=directory
+  file:
+    path: /var/www/errors
+    state: directory
+    mode: 0755
 
 - name: Create www directory
-  file: path=/var/www/html state=directory
+  file:
+    path: /var/www/html
+    state: directory
+    mode: 0755
 
 
 - name: configure istic error pages
-  template: src={{ item }} dest=/var/www/errors/{{ item | basename }}
+  template:
+    src: "{{ item }}"
+    dest: "/var/www/errors/{{ item | basename }}"
+    mode: 0644
   with_fileglob:
    - templates/errors/*
 
 - name: configure web base page
-  template: src=errors/404_host.html dest=/var/www/html/index.html
+  template:
+    src: errors/404_host.html
+    dest: /var/www/html/index.html
+    mode: 0644
 
 - name: "Nginx: check for installation"
   register: nginx_installed
-  stat: path="/etc/nginx/nginx.conf"
+  stat:
+    path: "/etc/nginx/nginx.conf"
 
 - name: configure nginx error pages
-  template: src=config/errors_nginx.conf dest=/etc/nginx/snippets/errors.conf
+  template:
+    src: config/errors_nginx.conf
+    dest: /etc/nginx/snippets/errors.conf
+    mode: 0644
   when: nginx_installed.stat.exists
   notify:
    - restart nginx
 
 - name: "Apache: check for installation"
   register: apache_installed
-  stat: path="/etc/apache2/apache2.conf"
+  stat:
+    path: "/etc/apache2/apache2.conf"
 
 - name: configure apache error pages
-  template: src=config/errors_apache.conf dest=/etc/apache2/conf-enabled/errors.conf
+  template:
+    src: config/errors_apache.conf
+    dest: /etc/apache2/conf-enabled/errors.conf
+    mode: 0644
   when: apache_installed.stat.exists
   notify:
    - restart apache
