--- a/roles/water-gkhs-mysql-backup/tasks/main.yml
+++ b/roles/water-gkhs-mysql-backup/tasks/main.yml
@@ -7,18 +7,16 @@
   tags:
     mysql_user
 
-- name: Ensure MySQL Python libraries are installed.
-  apt: "name={{ deb_mysql_python_package }} state=present"
+- name: Ensure Maria & MySQL Python libraries are installed.
+  apt:
+    state: present
+    pkg:
+      - "{{ deb_mysql_python_package }}"
+      - mariadb-server
+      - moreutils
+      - python3-mysqldb
   tags:
     mysql_user
-
-- apt: name=mariadb-server state=present
-- apt: name=moreutils state=present # provides chronic
-- name: Install python libraries
-  apt: 
-   name: python3-mysqldb
-   state: present
-
 
 # Set root password
 - name: Set Root Password
@@ -31,12 +29,28 @@
     mysql_user
 
 
-- ini_file: dest=/root/.my.cnf section=client option=user value=root mode=0600 backup=yes
-- ini_file: dest=/root/.my.cnf section=client option=password value={{ mysql_root_password }} mode=0600 backup=yes
+- name: Setup root user
+  ini_file:
+    dest: /root/.my.cnf
+    section: client
+    option: user
+    value: root
+    mode: 0600
+    backup: yes
+
+- name: Setup root user's password
+  ini_file:
+    dest: /root/.my.cnf
+    section: client
+    option: password
+    value: '{{ mysql_root_password }}'
+    mode: 0600
+    backup: yes
 
 # Setup backups
 
-- file:
+- name: Setup backup locations
+  file:
     path: "{{ item }}"
     state: directory
     mode: 0755
@@ -78,12 +92,27 @@
     - November
     - December
 
-- template: src=mysql_backup.sh dest=/usr/local/bin/mysql_backup.sh mode=0755
+- name: Setup backup script
+  template:
+    src: mysql_backup.sh
+    dest: /usr/local/bin/mysql_backup.sh
+    mode: 0755
 
-- cron: name="mysql_backup_daily" minute="16" hour="3"
-        user="root" job="chronic /usr/local/bin/mysql_backup.sh Daily/`date +\%A`"
-        cron_file=mysql_backup_daily
+- name: "Setup daily backup"
+  cron:
+    name: "mysql_backup_daily"
+    minute: "16"
+    hour: "3"
+    user: "root"
+    job: "chronic /usr/local/bin/mysql_backup.sh Daily/`date +%A`"
+    cron_file: mysql_backup_daily
 
-- cron: name="mysql_backup_monthly" minute="16" hour="0" day="1"
-        user="root" job="chronic /usr/local/bin/mysql_backup.sh Monthly/`date +\%B`"
-        cron_file=mysql_backup_monthly
+- name: "Setup monthly backup"
+  cron:
+    name: "mysql_backup_monthly"
+    minute: "16"
+    hour: "0"
+    day: "1"
+    user: "root"
+    job: "chronic /usr/local/bin/mysql_backup.sh Monthly/`date +%B`"
+    cron_file: mysql_backup_monthly
