--- a/roles/water-gkhs-nginx/tasks/main.yml
+++ b/roles/water-gkhs-nginx/tasks/main.yml
@@ -12,6 +12,7 @@
     src: files/clacks.conf
     owner: root
     group: root
+    mode: 0664
   notify:
    - restart nginx
 
@@ -20,6 +21,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/letsencrypt.conf
+    mode: 0664
   vars:
     cert_id: "{{ letsencrypt_dir }}"
 
@@ -29,6 +31,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/foipme.conf
+    mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "foip.me"
@@ -39,6 +42,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/istic.conf
+    mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "istic.net"
@@ -49,6 +53,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/carcosadreams_ssl.conf
+    mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "carcosadreams.com"
@@ -61,6 +66,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/hubris_ssl.conf
+    mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "hubris.house"
@@ -74,6 +80,7 @@
   template:
     src: letsencrypt.conf.j2
     dest: /etc/nginx/snippets/bromioscreations_ssl.conf
+    mode: 0664
   when: "'archipelago' in inventory_hostname"
   vars:
     cert_id: "bromioscreations.com"
