➕ Add some requirements for Flexget

--- a/roles/water-gkhs-flexget/tasks/main.yml
+++ b/roles/water-gkhs-flexget/tasks/main.yml
@@ -1,4 +1,16 @@
 
+- name: Install Flexget Packages
+  apt:
+    state: present
+    pkg:
+     - python3
+     - virtualenv
+     - acl
+  tags:
+    - flexget
+    - media
+
+
 - include: media-user-tasks.yml
   become: yes
   become_user: plex
